Update scrolling background and menu slide

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
             </h4>
             <div id="menu-options">
                 <h5>
-                    <a href="https://molecules1.github.io">Website</a>
+                    <a href="https://molecules1.github.io">Home</a>
                 </h5>
                 <h5>
-                    <a href="https://molecules1.github.io">Website aa</a>
+                    <a href="https://molecules1.github.io">Projects</a>
+                </h5>
+                <h5>
+                    <a href="https://molecules1.github.io">Resume</a>
                 </h5>
             </div>
         </div>
