--- a/v1/index.html
+++ b/v1/index.html
@@ -23,7 +23,7 @@
     <div id="sidebar">
         <div id="navbar">
             <h4>
-                Menu
+                MENU
             </h4>
             <div id="menu-options">
                 <h5>
@@ -39,43 +39,44 @@
         </div>
     </div>
     <div id="wrapper">
-        <div id="background"></div>
-        <div id="foreground">
-            <h1>molecules</h1>
-            <h2>Charles Paxson</h2>
-            <div id="content" class="home-page">
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
-                <p> eee </p>
+        <div id="sub-wrapper">
+            <div id="background"></div>
+            <div id="foreground">
+                <div id="content">
+                    <h1>molecules</h1>
+                    <h2>Charles Paxson</h2>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                    <p> eee </p>
+                </div>
+                <div id="carousel">
+                    <p>
+                        <img class="archimedean-solid" alt="Archimedean Solid" id="rhombicosidodecahedron"
+                            src="./images/optimizedRhombicosidodecahedronGif.gif" />
+                    </p>
+                </div>
             </div>
-            <div id="carousel" class="home-page">
-                <p>
-                    <img class="archimedean-solid" alt="Archimedean Solid" id="rhombicosidodecahedron"
-                        src="./images/optimizedRhombicosidodecahedronGif.gif" />
-                </p>
-            </div>
-
             <div class="bottom-bar">
                 <div class="contact">
                     <h6>Contact Info</h6>
