Hopefully remove the .html from the address

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -15,15 +15,15 @@
     <meta name="keywords" content="Paxson, Charles Paxson, Charles Henry Paxson, molecules" \>
 
     <!-- Style info -->
-    <link rel="stylesheet" href="./css/resume.css" />
+    <link rel="stylesheet" href="resume.css" />
 </head>
 
 <body>
     <div class="sidebar">
         <p id="menu"> Menu </p>
-        <a href="index.html">About</a>
-        <a href="resume.html">Resume/CV</a>
-        <a href="projects.html">Projects</a>
+        <a href="./about">About</a>
+        <a href="./resume">Resume/CV</a>
+        <a href="./projects">Projects</a>
     </div>
     <div class="main">
         <div id="left">
