--- a/projects.html
+++ b/projects.html
@@ -21,9 +21,9 @@
 <body>
     <div class="sidebar">
         <p id="menu"> Menu </p>
-        <a href="./about">About</a>
-        <a href="./resume">Resume/CV</a>
-        <a href="./projects">Projects</a>
+        <a href="about">About</a>
+        <a href="resume">Resume/CV</a>
+        <a href="projects">Projects</a>
     </div>
     <div class="main">
         <div class="project" id="fishsense">
