third times a charm

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta name="author" content="Charles Paxson" \>
     <meta name="description" content="Charles Paxson's curriculum vitae/resume website" \>
     <meta name="keywords" content="Paxson, Charles Paxson, Charles Henry Paxson, molecules" \>
-    <meta http-equiv="refresh" content="7; url='www.molecules1.github.io/about'" />
+    <meta http-equiv="refresh" content="7; url='about'" />
 </head>
 
 <body>
-    <p>Please follow <a href="www.molecules1.github.io/about">this link</a>.</p>
+    <p>Please follow <a href="about">this link</a>.</p>
 </body>
 
 </html>
