--- a/index.html
+++ b/index.html
@@ -13,11 +13,41 @@
     <meta name="author" content="Charles Paxson" \>
     <meta name="description" content="Charles Paxson's curriculum vitae/resume website" \>
     <meta name="keywords" content="Paxson, Charles Paxson, Charles Henry Paxson, molecules" \>
-    <meta http-equiv="refresh" content="7; url='about'" />
+
+    <!-- Style info -->
+    <link rel="stylesheet" href="about.css" />
 </head>
 
 <body>
-    <p>Please follow <a href="about">this link</a>.</p>
+    <div class="sidebar">
+        <p id="menu"> Menu </p>
+        <a href="index">About</a>
+        <a href="resume">Resume/CV</a>
+        <a href="projects">Projects</a>
+    </div>
+    <div class="main">
+        <div id="left">
+            <h1> Charles Paxson </h1>
+            <h2> Student </h2>
+            <img id="rhombicosidodecahedron" src="./images/optimizedRhombicosidodecahedronGif.gif" />
+        </div>
+        <div id="right">
+            <div class="container" id="About">
+                <h2> About </h2>
+                <p> I'm a 16-year old mechanical engineering student transfering to a four-year university in Fall 2022.  I've done a decent amount of work in the field, and hope to do more as I complete my schooling and beyond. </p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="contact">
+            <h3> Contact/Platforms</h3>
+            <a href="https://discord.com/users/288182931933888513">Discord</a>
+            <a href="mailto:tauindustries@gmail.com">Email</a>
+            <a href="https://github.com/molecules1">Github</a>
+            <a href="https://www.reddit.com/user/_molecules">Reddit</a>
+            <a href="https://www.youtube.com/channel/UCifYwaTzzs6sm_tgiWigJSA">Youtube</a>
+        </div>
+    </footer>
 </body>
 
 </html>
