--- a/resume.html
+++ b/resume.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8" \>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>Charles's Resume</title>
+    <title> Resume</title>
 
     <!-- Metadata -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Charles Paxson" \>
-    <meta name="description" content="Charles Paxson's curriculum vitae/resume website" \>
+    <meta name="description" content="Resume" \>
     <meta name="keywords" content="Paxson, Charles Paxson, Charles Henry Paxson, molecules" \>
 
     <!-- Style info -->
