--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="sidebar">
         <p id="menu"> Menu </p>
-        <a href="">About</a>
+        <a href="https://molecules1.github.io">About</a>
         <a href="resume">Resume/CV</a>
         <a href="projects">Projects</a>
     </div>
