--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Style info -->
     <link rel="stylesheet" href="about.css" />
+    <script src="scripts.js"></script>
 </head>
 
 <body>
@@ -24,6 +25,7 @@
         <a href="/">About</a>
         <a href="resume">Resume/CV</a>
         <a href="projects">Projects</a>
+        <div id="button-container"><button onClick="darkToggle()"><i>Toggle Theme</i></button></div>
     </div>
     <div class="main">
         <div id="left">
