--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
     <script src="scripts.js"></script>
 </head>
 
-<body>
+<body onload="setMode()">
     <div class="sidebar">
         <p id="menu"> Menu </p>
         <a href="/">About</a>
