Consolidate css files

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     <meta name="keywords" content="Paxson, Charles Paxson, Charles Henry Paxson, molecules" \>
 
     <!-- Style info -->
-    <link rel="stylesheet" href="projects.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js"></script>
 </head>
 
