--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
         <a href="projects">Projects</a>
         <div id="button-container"><button onClick="darkToggle()"><i>Toggle Theme</i></button></div>
     </div>
-    <div class="main">
+    <div class="project-main">
         <div class="project" id="fishsense">
             <h1> FishSense </h1>
             <div class="project-content">
@@ -38,6 +38,9 @@
                 <div class="proj-right">
                     <p>
                         <a href="http://e4e.ucsd.edu/fishsense">Fishsense</a> is a UCSD research project that utilizes depth cameras and AI to catalogue fish populations.  My job was to design the waterproof enclosure for its batteries, data storage, and AI processor.
+                    </p>
+                    <p>
+                        Of course, this was my first <i>serious</i> project, so I made quite a few mistakes along the way.  I think I've learned from them, and I hope I can work better and faster with future projects.
                     </p>
                 </div>
             </div>
