--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" \>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>About</title>
+    <title>Gallery</title>
 
     <!-- Metadata -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -29,17 +29,7 @@
         <div id="button-container"><button onClick="darkToggle()"><i>Toggle Theme</i></button></div>
     </div>
     <div class="main">
-        <div id="left">
-            <h1> Charles Paxson </h1>
-            <h2> Student </h2>
-            <img id="rhombicosidodecahedron" src="./images/optimizedRhombicosidodecahedronGif.gif" />
-        </div>
-        <div id="right">
-            <div class="container" id="About">
-                <h2> About </h2>
-                <p> I'm a 16-year old mechanical engineering student transfering to a four-year university in Fall 2022.  I've done a decent amount of work in the field, and hope to do more as I complete my schooling and beyond. </p>
-            </div>
-        </div>
+        <p style="text-align:center;">WIP</p>
     </div>
     <footer>
         <div class="contact">
