--- a/resume.html
+++ b/resume.html
@@ -25,6 +25,7 @@
         <a href="/">About</a>
         <a href="resume">Resume/CV</a>
         <a href="projects">Projects</a>
+        <a href="gallery">Gallery</a>
         <div id="button-container"><button onClick="darkToggle()"><i>Toggle Theme</i></button></div>
     </div>
     <div class="main">
@@ -122,7 +123,7 @@
                         <ul class="exp-description">
                             <li> Lead mechanical designer and builder </li>
                             <li> Helped with hours of software tweaking after the hardware was complete </li>
-                            <li> Went to 2018 World Championships </li>
+                            <li> Went to 2018 World Championships (Houston, Texas) </li>
                             <li> Chief field trouble-shooter </li>
                         </ul>
                     </li>
@@ -132,7 +133,7 @@
                         <ul class="exp-description">
                             <li> Lead mechanical designer and builder </li>
                             <li> Software testing assistant </li>
-                            <li> Went to regional competition every year </li>
+                            <li> Went to the San Diego regional competition every year </li>
                             <li> Nominated for the Global Innovation Award in 2016 </li>
                         </ul>
                     </li>
@@ -199,9 +200,17 @@
                             </ul>
                         </li>
                     </ul>
-                    <p class="exp-description">
-                        Accepted to UC Berkeley, UC Irvine, Cal Poly as a transfer student in Mechanical Engineering
-                    </p>
+                    <ul class="experience">
+                        <li>
+                            <p class="exp-title"> 4-year College Acceptances </p>
+                            <ul class="exp-description">
+                                <li> UC Berkeley (current choice) </li>
+                                <li> UC San Diego </li>
+                                <li> Cal Poly </li>
+                                <li> UC Irvine </li>
+                            </ul>
+                        </li>
+                    </ul>
             </div>
         </div>
     </div>
