--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="proj-right">
                     <p>
-                        <a href="http://e4e.ucsd.edu/fishsense">Fishsense</a> is a UCSD research project that utilizes depth cameras and AI to catalogue fish populations.  My job was to design the waterproof enclosure for its batteries, data storage, and AI processor.
+                        <a href="http://e4e.ucsd.edu/fishsense">Fishsense is a UCSD research project</a> that utilizes depth cameras and AI to catalogue fish populations.  My job was to design the waterproof enclosure for its batteries, data storage, and AI processor.
                     </p>
                     <p>
                         Of course, this was my first <i>serious</i> project, so I made quite a few mistakes along the way.  I think I've learned from them, and I hope I can work better and faster with future projects.
