--- a/fishsense.html
+++ b/fishsense.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div class="main">
+        <div style="width: 50vw; margin: auto;">
             <p>
                 There was a prototype of the system before I came on to the project that utilized a Raspberry Pi as the processor.
                 It had issues with buoyancy, because the enclosure was mostly empty. My design switched it over to a NVIDIA Jetson
