add fishsense paper

--- a/projects/fishsense.html
+++ b/projects/fishsense.html
@@ -58,6 +58,8 @@
                 external references, it is difficult to modify certain parts. I'm working on making all mechanical interfaces
                 defined by sketch blocks.
             </p>
+            <h2>Papers</h2>
+            <a href="https://ieeexplore.ieee.org/document/9705929">FishSense: Underwater RGBD Imaging for Fish Measurement</a>
         </div>
     </div>
     <footer>
