fix fishsense page styling

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
     </div>
     <div class="project-main">
         <div class="project" id="fishsense">
-            <h1> <a href="projects/fishsense">FishSense</a> </h1>
+            <h1> <a href="fishsense">FishSense</a> </h1>
             <div class="project-content">
                 <div class="proj-left">
                     <img class="img" src="./images/fishsense.png" />
