--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
         <div id="button-container"><button onClick="darkToggle()"><i>Toggle Theme</i></button></div>
     </div>
     <div class="main">
-        <p style="text-align:center;">WIP</p>
+        <h1 style="text-align:center;">WIP</h1>
     </div>
     <footer>
         <div class="contact">
@@ -40,7 +40,6 @@
             <a href="https://www.reddit.com/user/_molecules">Reddit</a>
             <a href="https://www.youtube.com/channel/UCifYwaTzzs6sm_tgiWigJSA">Youtube</a>
         </div>
-        <p style="text-align:center; font-size:10px;"><i>I'm no web designer, but this is good enough.</i></p>
     </footer>
 </body>
 
