Add CSWP certification

--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
                 <h2> Skills </h2>
                 <ul class="skill-list">
                     <li> Mechanical Design </li>
-                    <li> CAD <span style="font-style:italic"> (CSWA certified) </span></li>
+                    <li> CAD <span style="font-style:italic"> (CSWP & CSWA certified) </span></li>
                     <li> Microsoft Office </li>
                     <li> LaTeX </li>
                     <li> HTML & CSS </li>
