--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
                 <h2> Personal Info </h2>
                     <ul style="list-style-type: none; margin: 0; padding: 0;">
                         <li><a href="tel:858-215-1679">858-215-1679 <span style="font-style:italic;">(Google Voice)</span></a></li>
-                        <li><a href="mailto:tauindustries@gmail.com">tauindustries@gmail.com</a></li>
+                        <li><a href="mailto:chpaxson@gmail.com">chpaxson@gmail.com</a></li>
                     </ul>
                     
             </div>
