--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" \>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title> Resume</title>
+    <title>Resume</title>
 
     <!-- Metadata -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -81,11 +81,12 @@
                 <ul class="experience">
                     <li>
                         <p class="exp-title"> Art of Problem Solving Teacher's Assistant</p>
-                        <p class="date"> 2021 - Present </p>
+                        <p class="date"> 2021 - 2022 </p>
                         <ul class="exp-description">
                             <li> Help teach 3rd grade and 7-9th grade students in a summer math camp </li>
                             <li> Help grade papers and counsel students </li>
                             <li> Help teachers manage Zoom classrooms </li>
+                            <li> Help teachers manage in-person classrooms</li>
                         </ul>
                     </li>
                 </ul>
