--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
         <div class="contact">
             <h3> Contact/Platforms</h3>
             <a href="https://discord.com/users/288182931933888513">Discord</a>
-            <a href="mailto:tauindustries@gmail.com">Email</a>
+            <a href="mailto:chpaxson@berkeley.edu">Email</a>
             <a href="https://github.com/molecules1">Github</a>
             <a href="https://www.reddit.com/user/_molecules">Reddit</a>
             <a href="https://www.youtube.com/channel/UCifYwaTzzs6sm_tgiWigJSA">Youtube</a>
