--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="right">
             <div class="container" id="About">
                 <h2> About </h2>
-                <p> I'm a 17-year old mechanical engineering student transfering to UC Berkeley in Fall 2022.  I've done a decent amount of work in the field, and hope to do more as I complete my schooling and beyond. </p>
+                <p> I'm a junior transfer student in mechanical engineering at UC Berkeley.  I've done a decent amount of work in the field, and hope to do more as I complete my schooling and beyond. </p>
             </div>
         </div>
     </div>
@@ -45,12 +45,11 @@
         <div class="contact">
             <h3> Contact/Platforms</h3>
             <a href="https://discord.com/users/288182931933888513">Discord</a>
-            <a href="mailto:tauindustries@gmail.com">Email</a>
+            <a href="mailto:chpaxson@berkeley.edu">Email</a>
             <a href="https://github.com/molecules1">Github</a>
             <a href="https://www.reddit.com/user/_molecules">Reddit</a>
             <a href="https://www.youtube.com/channel/UCifYwaTzzs6sm_tgiWigJSA">Youtube</a>
         </div>
-        <p style="text-align:center; font-size:10px;"><i>I'm no web designer, but this is good enough.</i></p>
     </footer>
 </body>
 
