--- a/resume.html
+++ b/resume.html
@@ -39,39 +39,17 @@
                 <h2> Personal Info </h2>
                     <ul style="list-style-type: none; margin: 0; padding: 0;">
                         <li><a href="tel:858-215-1679">858-215-1679 <span style="font-style:italic;">(Google Voice)</span></a></li>
-                        <li><a href="mailto:chpaxson@gmail.com">chpaxson@gmail.com</a></li>
+                        <li><a href="mailto:chpaxson@berkeley.edu">chpaxson@berkeley.edu</a></li>
                     </ul>
                     
             </div>
             <div class="container" id="Skills">
                 <h2> Skills </h2>
                 <ul class="skill-list">
-                    <li> Mechanical Design </li>
+                    <li> Mechanical Design and Analysis </li>
                     <li> CAD <span style="font-style:italic"> (CSWP & CSWA certified) </span></li>
-                    <li> Microsoft Office </li>
                     <li> LaTeX </li>
                     <li> HTML & CSS </li>
-                </ul>
-            </div>
-            <div class="container" id="Coursework">
-                <h2> College Coursework </h2>
-                <ul class="skill-list">
-                    <li> SOLIDWORKS I, II </li>
-                    <li> Intro to Welding </li>
-                    <li> Calculus I, II, III </li>
-                    <li> Differential Equations </li>
-                    <li> Physics I, II, III </li>
-                    <li> Engineering Mechanics - Statics </li>
-                    <li> Engineering Mechanics - Dynamics </li>
-                    <li> Properties of Materials </li>
-                    <li> Electrical Network Analysis </li>
-                    <li> Intro to C++ Programming </li>
-                    <li> Chemistry </li>
-                    <li> Biology </li>
-                    <li> Interpersonal Communication </li>
-                    <li> English </li>
-                    <li> Chinese (3 years) </li>
-                    <li> Spanish (1 term) </li>
                 </ul>
             </div>
         </div>
@@ -81,7 +59,7 @@
                 <ul class="experience">
                     <li>
                         <p class="exp-title"> Art of Problem Solving Teacher's Assistant</p>
-                        <p class="date"> 2021 - Present </p>
+                        <p class="date"> 2021 - 2022 </p>
                         <ul class="exp-description">
                             <li> Help teach 3rd grade and 7-9th grade students in a summer math camp </li>
                             <li> Help grade papers and counsel students </li>
@@ -95,26 +73,17 @@
                 <ul class="experience">
                     <li>
                         <p class="exp-title"> Triton Robotics FishSense Mechanical Engineer </p>
-                        <p class="date"> 2021 - Present </p>
+                        <p class="date"> 2021 - 2022 </p>
                         <ul class="exp-description">
-                            <li> Design a waterproof camera module to contain a depth camera and processor </li>
+                            <li> Designed a waterproof camera module to contain a depth camera and processor </li>
                             <li> Source components for the aforementioned camera module </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <p class="exp-title"> Triton Robotics Mechanical Consultant </p>
-                        <p class="date"> 2020 - 2021 </p>
-                        <ul class="exp-description">
-                            <li> Help CAD parts for manufacture </li>
-                            <li> Advise on manufacturing capabilities and limits </li>
-                            <li> Turned into FishSense work </li>
                         </ul>
                     </li>
                     <li>
                         <p class="exp-title"> Junior FLL Mentor </p>
                         <p class="date"> 2020 - 2021 </p>
                         <ul class="exp-description">
-                            <li> Teach 2-4th grade students basic mechanical and engineering principles </li>
+                            <li> Taught 2-4th grade students basic mechanical and engineering principles </li>
                         </ul>
                     </li>
                     <li>
@@ -122,9 +91,7 @@
                         <p class="date"> 2016 - 2019 </p>
                         <ul class="exp-description">
                             <li> Lead mechanical designer and builder </li>
-                            <li> Helped with hours of software tweaking after the hardware was complete </li>
                             <li> Went to 2018 World Championships (Houston, Texas) </li>
-                            <li> Chief field trouble-shooter </li>
                         </ul>
                     </li>
                     <li>
@@ -132,7 +99,6 @@
                         <p class="date"> 2013 - 2016 </p>
                         <ul class="exp-description">
                             <li> Lead mechanical designer and builder </li>
-                            <li> Software testing assistant </li>
                             <li> Went to the San Diego regional competition every year </li>
                             <li> Nominated for the Global Innovation Award in 2016 </li>
                         </ul>
@@ -161,7 +127,7 @@
                         <p class="exp-title"> Trombone </p>
                         <p class="date"> 2016 - 2020 </p>
                         <ul class="exp-description">
-                            <li> Joined 2017 Palomar Summer Symphony Orchestra </li>
+                            <li> Joined the 2017 Palomar Summer Symphony Orchestra </li>
                             <li> Went to California All State Band in 2019 </li>
                             <li> Went to California All Southern Band in 2018 and 2019, first chair in 2019 </li>
                         </ul>
@@ -172,8 +138,12 @@
                 <h2> Education </h2>
                     <ul class="experience">
                         <li>
+                            <p class="exp-title"> University of California, Berkeley </p>
+                            <p class="date"> 2022-Present </p>
+                        </li>
+                        <li>
                             <p class="exp-title"> Palomar College </p>
-                            <p class="date"> 2016 - Present </p>
+                            <p class="date"> 2016 - 2022 </p>
                             <ul class="exp-description">
                                 <li> 3.879 GPA</li>
                                 <li> Fall 2020 Dean's List </li>
@@ -207,7 +177,7 @@
         <div class="contact">
             <h3> Contact/Platforms</h3>
             <a href="https://discord.com/users/288182931933888513">Discord</a>
-            <a href="mailto:tauindustries@gmail.com">Email</a>
+            <a href="mailto:chpaxson@berkeley.edu">Email</a>
             <a href="https://github.com/molecules1">Github</a>
             <a href="https://www.reddit.com/user/_molecules">Reddit</a>
             <a href="https://www.youtube.com/channel/UCifYwaTzzs6sm_tgiWigJSA">Youtube</a>
