--- a/projects.html
+++ b/projects.html
@@ -78,6 +78,9 @@
                         My group created PharmaPill, a secure pill dispenser to help reduce the 15,000 deaths each year caused by prescription drug overdose.  It would be a secure container with several layers of physical protection, along with validation before actually dispensing pills.  It would be filled by pharmacists, and locked until the patient returns it when their prescription is complete.
                     </p>
                     <p>
+                        In the end, the T-PREP program was combined with the PREP program for freshman students, totalling 32 teams.  There were 10 awards given among the teams, and our project received 4 of them.
+                    </p>
+                    <p>
                         This was a crude prototype constructed in 26 hours, with very limited part availability.  We designed this prototype to use a pill "hopper" and an iris mechanism to limit the number of pills that come through, but this approach is overcomplicated and still has the chance to dispense too many or too few pills.  If we ever revisit this project, we will likely use more of a pill "magazine" that would be customized to each distinct pill type.
                     </p>
                 </div>
