--- a/resume.html
+++ b/resume.html
@@ -47,9 +47,13 @@
                 <h2> Skills </h2>
                 <ul class="skill-list">
                     <li> Mechanical Design and Analysis </li>
-                    <li> CAD <span style="font-style:italic"> (CSWP & CSWA certified) </span></li>
+                    <li> CAD <span style="font-style:italic"> (SOLIDWORKS CSWP certified) </span></li>
                     <li> LaTeX </li>
                     <li> HTML & CSS </li>
+                    <li> MATLAB </li>
+                    <li> Python </li>
+                    <li> C++ </li>
+                    <li> Electrical Analysis </li>
                 </ul>
             </div>
         </div>
@@ -141,12 +145,16 @@
                         <li>
                             <p class="exp-title"> University of California, Berkeley </p>
                             <p class="date"> 2022-Present </p>
+                            <ul class="exp-description">
+                                <li> First semester, so GPA is N/A </li>
+                                <li> Junior standing </li>
+                            </ul>
                         </li>
                         <li>
                             <p class="exp-title"> Palomar College </p>
                             <p class="date"> 2016 - 2022 </p>
                             <ul class="exp-description">
-                                <li> 3.879 GPA</li>
+                                <li> 3.879 GPA </li>
                                 <li> Fall 2020 Dean's List </li>
                             </ul>
                         </li>
@@ -156,7 +164,7 @@
                             <p class="exp-title"> Los Angeles City College </p>
                             <p class="date"> 2020 - 2022 </p>
                             <ul class="exp-description">
-                                <li> 4.00 GPA</li>
+                                <li> 4.00 GPA </li>
                                 <li> Fall 2020, Spring 2021 Dean's Honor List </li>
                             </ul>
                         </li>
@@ -166,7 +174,7 @@
                             <p class="exp-title"> Mt. Carmel High School </p>
                             <p class="date"> 2019 - 2020 </p>
                             <ul class="exp-description">
-                                <li> 4.25 GPA</li>
+                                <li> 4.25 GPA </li>
                                 <li> 2019 Honor Roll </li>
                             </ul>
                         </li>
