--- a/resume.html
+++ b/resume.html
@@ -146,8 +146,7 @@
                             <p class="exp-title"> University of California, Berkeley </p>
                             <p class="date"> 2022-Present </p>
                             <ul class="exp-description">
-                                <li> First semester, so GPA is N/A </li>
-                                <li> Junior standing </li>
+                                <li> 3.785 GPA </li>
                             </ul>
                         </li>
                         <li>
