--- a/resume.html
+++ b/resume.html
@@ -62,6 +62,14 @@
                 <h2> Work Experience </h2>
                 <ul class="experience">
                     <li>
+                        <p class="exp-title"> Hologic R&D Engineering Intern</p>
+                        <p class="date"> 2023 - Present </p>
+                        <ul class="exp-description">
+                            <li> Developed a prototype for a new instrument </li>
+                            <li> Tested and experimented with pre-existing Hologic machines </li>
+                        </ul>
+                    </li>
+                    <li>
                         <p class="exp-title"> Art of Problem Solving Teacher's Assistant</p>
                         <p class="date"> 2021 - 2022 </p>
                         <ul class="exp-description">
@@ -84,13 +92,13 @@
                             <li> Source components for the aforementioned camera module </li>
                         </ul>
                     </li>
-                    <li>
+                    <!-- <li>
                         <p class="exp-title"> Junior FLL Mentor </p>
                         <p class="date"> 2020 - 2021 </p>
                         <ul class="exp-description">
                             <li> Taught 2-4th grade students basic mechanical and engineering principles </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li>
                         <p class="exp-title"> FIRST Tech Challenge </p>
                         <p class="date"> 2016 - 2019 </p>
@@ -146,7 +154,7 @@
                             <p class="exp-title"> University of California, Berkeley </p>
                             <p class="date"> 2022-Present </p>
                             <ul class="exp-description">
-                                <li> 3.785 GPA </li>
+                                <li> 3.813 GPA </li>
                             </ul>
                         </li>
                         <li>
